<resources>

    <string name="app_name">Bus_Tracker</string>
    <string name="add_textbox_hint">Add a ToDo item</string>
    <string name="add_button_text">Add</string>
    <string name="service_title">Mobile Apps </string>
    <string name="menu_refresh">Refresh</string>
    <string name="checkbox_text">Item Text</string>
    
    <string name="bustracker">Bus Tracker</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="log_in_troubles">Having trouble signing in? Contact US</string>
    <string name="log_in">Log in</string>
    <string name="sign_in">Sign in</string>
    <string name="logging_in">Logging in</string>
    <string name="log_out">Log out</string>
    <string name="username">Username</string>
    <string name="credits">Made with \u2665 </string>

</resources>